# taxinator

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/src/taxinator_backend/: __init__.py  main.py
backend/src/taxinator_backend/api/: routes.py
backend/src/taxinator_backend/core/: ai.py  config.py  models.py  services.py
backend/tests/: conftest.py  test_health.py  test_ingestion.py  test_workflow.py
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/styles/: global.css
web/: package-lock.json  package.json
web/src/app/: page.tsx
web/src/app/manual/: page.tsx
web/src/app/tammy/: page.tsx
web/src/components/ui/: button.tsx  input.tsx
