[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taxinator-backend"
version = "0.1.0"
description = "Middleware API service for tax data normalization and translation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Taxinator", email = "dev@taxinator.io" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "fastapi>=0.110,<0.112",
    "uvicorn[standard]>=0.27,<0.39",
    "pydantic>=2.6,<3.0",
    "openai>=2.8,<3.0",
    "openai-agents>=0.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<0.28",
    "ruff>=0.3,<0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
